--- a/src/main/resources/WrittersUnited/primary.fxml
+++ b/src/main/resources/WrittersUnited/primary.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="384.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="384.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WrittersUnited.PrimaryController">
    <children>
       <Label alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="INICIAR SESION">
          <VBox.margin>
@@ -12,25 +12,31 @@
          </VBox.margin></Label>
       <Label text="CORREO">
          <VBox.margin>
-            <Insets top="5.0" />
+            <Insets left="5.0" top="5.0" />
          </VBox.margin></Label>
       <TextField fx:id="mail">
          <VBox.margin>
             <Insets left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </TextField>
-      <Label text="USUARIO" />
+      <Label text="USUARIO">
+         <VBox.margin>
+            <Insets left="5.0" />
+         </VBox.margin></Label>
       <TextField fx:id="user">
          <VBox.margin>
             <Insets left="10.0" right="10.0" top="10.0" />
          </VBox.margin></TextField>
-      <Label text="CONTRASEÑA" />
+      <Label text="CONTRASEÑA">
+         <VBox.margin>
+            <Insets left="5.0" />
+         </VBox.margin></Label>
       <TextField>
          <VBox.margin>
             <Insets left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </TextField>
-      <Button fx:id="login" alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="INICIAR SESION">
+      <Button fx:id="login" alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cambiar" text="INICIAR SESION">
          <VBox.margin>
             <Insets left="40.0" right="40.0" top="40.0" />
          </VBox.margin>
