--- a/src/main/resources/WrittersUnited/secondary.fxml
+++ b/src/main/resources/WrittersUnited/secondary.fxml
@@ -1,16 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WrittersUnited.SecondaryController">
-    <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="PROYECTO">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Nuevo" />
+                  <MenuItem mnemonicParsing="false" text="Cambiar a ..." />
+                  <MenuItem mnemonicParsing="false" text="Eliminar" />
+                  <MenuItem mnemonicParsing="false" text="Guardar" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="CAPÍTULO">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Nuevo" />
+                  <MenuItem mnemonicParsing="false" text="Cambiar a ..." />
+                  <MenuItem mnemonicParsing="false" text="Opciones" />
+                  <MenuItem mnemonicParsing="false" text="Eliminar" />
+                  <MenuItem mnemonicParsing="false" text="Ordenar" />
+                  <MenuItem mnemonicParsing="false" text="Guardar" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <left>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fx:id="imagen" fitHeight="184.0" fitWidth="101.0" pickOnBounds="true" smooth="false" />
+            <TableView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+              <columns>
+                <TableColumn prefWidth="99.0" text="Personajes" />
+              </columns>
+            </TableView>
+         </children>
+      </GridPane>
+   </left>
+   <center>
+      <TextArea prefHeight="563.0" prefWidth="495.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin></TextArea>
+   </center>
+</BorderPane>
