--- a/src/main/resources/WrittersUnited/secondary.fxml
+++ b/src/main/resources/WrittersUnited/secondary.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="627.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -46,14 +46,38 @@
               <columns>
                 <TableColumn prefWidth="99.0" text="Personajes" />
               </columns>
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
             </TableView>
          </children>
+         <padding>
+            <Insets bottom="20.0" />
+         </padding>
       </GridPane>
    </left>
    <center>
-      <TextArea prefHeight="563.0" prefWidth="495.0" BorderPane.alignment="CENTER">
+      <TextArea prefHeight="538.0" prefWidth="531.0" wrapText="true" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="10.0" right="10.0" top="10.0" />
          </BorderPane.margin></TextArea>
    </center>
+   <bottom>
+      <HBox prefHeight="37.0" prefWidth="688.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" text="ANTERIOR">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin></Button>
+            <Button mnemonicParsing="false" text="SIGUENTE">
+               <HBox.margin>
+                  <Insets left="535.0" right="5.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
 </BorderPane>
