--- a/src/main/resources/WrittersUnited/primary.fxml
+++ b/src/main/resources/WrittersUnited/primary.fxml
@@ -1,47 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="384.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WrittersUnited.PrimaryController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="263.0" prefWidth="254.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WrittersUnited.Login_Controller">
    <children>
       <Label alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="INICIAR SESION">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin></Label>
-      <Label text="CORREO">
-         <VBox.margin>
-            <Insets left="5.0" top="5.0" />
-         </VBox.margin></Label>
-      <TextField fx:id="mail">
-         <VBox.margin>
-            <Insets left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </TextField>
       <Label text="USUARIO">
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets left="15.0" right="15.0" />
          </VBox.margin></Label>
-      <TextField fx:id="user">
+      <TextField fx:id="txt_username">
          <VBox.margin>
-            <Insets left="10.0" right="10.0" top="10.0" />
-         </VBox.margin></TextField>
+            <Insets left="15.0" right="15.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding>
+      </TextField>
       <Label text="CONTRASEÑA">
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets left="15.0" right="15.0" />
          </VBox.margin></Label>
-      <TextField>
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="txt_visible_Password" onKeyReleased="#visiblepassword_to_password" prefHeight="25.0" prefWidth="223.0">
+               <padding>
+                  <Insets top="5.0" />
+               </padding></TextField>
+            <PasswordField fx:id="txt_password" onKeyReleased="#password_to_visiblepassword" prefHeight="25.0" prefWidth="223.0">
+               <padding>
+                  <Insets bottom="5.0" top="5.0" />
+               </padding>
+            </PasswordField>
+            <CheckBox fx:id="che_showPassword" mnemonicParsing="false" onAction="#show_lock_Password" text="Mostrar Contraseña" GridPane.rowIndex="1" />
+         </children>
          <VBox.margin>
-            <Insets left="10.0" right="10.0" top="10.0" />
+            <Insets left="15.0" right="15.0" />
          </VBox.margin>
-      </TextField>
-      <Button fx:id="login" alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cambiar" text="INICIAR SESION">
+      </GridPane>
+      <Button fx:id="btn_login" alignment="BOTTOM_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login" text="INICIAR SESION">
          <VBox.margin>
-            <Insets left="40.0" right="40.0" top="40.0" />
+            <Insets left="40.0" right="40.0" top="20.0" />
          </VBox.margin>
       </Button>
-      <Button fx:id="register" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="REGISTRARSE">
+      <Button fx:id="btn_txt_create_user" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#create" text="REGISTRARSE">
          <VBox.margin>
             <Insets left="40.0" right="40.0" top="15.0" />
          </VBox.margin>
