Table name resize fix

--- a/src/main/resources/WrittersUnited/SelectProject.fxml
+++ b/src/main/resources/WrittersUnited/SelectProject.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="303.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <TableView prefHeight="203.0" prefWidth="112.0" BorderPane.alignment="CENTER">
@@ -17,6 +16,9 @@
          <BorderPane.margin>
             <Insets bottom="16.0" left="17.0" right="-9.0" top="19.0" />
          </BorderPane.margin>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </center>
    <right>
