--- a/src/main/resources/WrittersUnited/mail_validator.fxml
+++ b/src/main/resources/WrittersUnited/mail_validator.fxml
@@ -1,36 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="241.0" prefWidth="240.0" style="-fx-background-image: url('file:src/main/resources/images/backvalidation.jpg');" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Final_Showdown.Mail_Validation_Controller">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="245.0" prefWidth="234.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WrittersUnited.Mail_Validation_Controller">
    <children>
-      <Button fx:id="btn_confirm" layoutX="49.0" layoutY="188.0" mnemonicParsing="false" onAction="#confirm" text="Confirmar" />
-      <Button fx:id="btn_cancel" layoutX="129.0" layoutY="188.0" mnemonicParsing="false" onAction="#cancel" text="Cancelar" />
-      <TextField fx:id="txt_code" layoutX="45.0" layoutY="112.0" />
-      <Text fill="WHITE" layoutX="28.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Escriba el código que se le ha enviado a su correo electŕonico" textAlignment="CENTER" wrappingWidth="183.8502960205078" />
-      <Button fx:id="btn_resend" layoutX="69.0" layoutY="154.0" mnemonicParsing="false" onAction="#resend" text="Reenviar código" />
-      <GridPane layoutX="45.0" layoutY="75.0" prefHeight="30.0" prefWidth="149.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Escriba el código que se le ha enviado a su correo electŕonico" textAlignment="CENTER" wrappingWidth="183.8502960205078">
+         <VBox.margin>
+            <Insets bottom="5.0" />
+         </VBox.margin>
+      </Text>
+      <Button fx:id="btn_resend" mnemonicParsing="false" onAction="#resend" text="Reenviar código">
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+      </Button>
+      <GridPane prefHeight="30.0" prefWidth="149.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Label fx:id="lab_mail" text="Label" textFill="WHITE" GridPane.halignment="CENTER">
+            <Label fx:id="lab_mail" text="Label" GridPane.halignment="CENTER">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
+               <GridPane.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </GridPane.margin>
             </Label>
          </children>
       </GridPane>
+      <Label fx:id="lab_mail" text="Label">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="15.0" right="15.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" />
+         </padding>
+      </Label>
+      <TextField fx:id="txt_code" prefHeight="23.0" prefWidth="203.0">
+         <padding>
+            <Insets left="15.0" right="15.0" />
+         </padding>
+         <VBox.margin>
+            <Insets left="15.0" right="15.0" />
+         </VBox.margin>
+      </TextField>
+      <Button fx:id="btn_confirm" mnemonicParsing="false" onAction="#confirm" text="Confirmar">
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+      </Button>
+      <Button fx:id="btn_cancel" mnemonicParsing="false" onAction="#cancel" text="Cancelar">
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+      </Button>
    </children>
-</Pane>
+</VBox>
